// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About page snapshots tests renders default about page 1`] = `
<div
  className="layout-fill"
>
  <h1
    className="page-title display-1"
  >
    Add a journal article
  </h1>
  <Stepper
    activeStep={0}
    connector={<pure(StepConnector) />}
    linear={true}
    onChange={[Function]}
    orientation="horizontal"
    style={
      Object {
        "margin": "-10px auto",
        "padding": "0 25px",
      }
    }
  >
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Search for your publication
      </StepLabel>
    </Step>
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Search results
      </StepLabel>
    </Step>
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Claim or Add your publication
      </StepLabel>
    </Step>
  </Stepper>
  <div
    style={
      Object {
        "margin": "auto",
        "maxWidth": "1200px",
        "width": "100%",
      }
    }
  >
    <ExpandTransition
      enterDelay={0}
      loading={false}
      open={true}
      transitionDelay={0}
      transitionDuration={450}
    >
      <div
        style={
          Object {
            "margin": "0 16px",
            "overflow": "hidden",
          }
        }
      >
        <div>
          <Connect(ReduxForm)
            defaultButtonLabel="Enter DOI, Pubmed ID or Title"
            defaultSearchFieldLabel="Enter DOI, Pubmed ID or Title"
            explanationText="Enter either the publication DOI (e.g. 10.1163/9789004326828), Pubmed ID (e.g. 28131963) or the title of the publication. This will allow us to check whether the record is already in eSpace or is available from another source."
            helpText="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet ac risus et blandit. Vivamus varius ornare metus vitae sagittis. Donec erat urna, interdum vitae faucibus a, tempus eu orci. Aenean venenatis lacus eu sapien dignissim, non rhoncus dolor facilisis. Donec finibus tristique nunc nec facilisis. Pellentesque luctus libero faucibus ex mattis, vitae commodo nunc vehicula. Nam nec porttitor sapien. Sed rutrum, mauris id luctus eleifend, eros lectus auctor nibh, a eleifend est est eu nunc."
            helpTitle="No matching records"
            onSubmit={[Function]}
            title="Search for your publication"
          />
        </div>
        <div
          style={
            Object {
              "display": "none",
              "marginBottom": 12,
              "marginTop": 24,
            }
          }
        >
          <FlatButton
            disabled={true}
            fullWidth={false}
            label="Back"
            labelPosition="after"
            labelStyle={Object {}}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            onTouchTap={[Function]}
            primary={false}
            secondary={false}
            style={
              Object {
                "marginRight": 12,
              }
            }
          />
          <RaisedButton
            disabled={false}
            fullWidth={false}
            label="Next"
            labelPosition="after"
            onTouchTap={[Function]}
            primary={true}
            secondary={false}
          />
        </div>
      </div>
    </ExpandTransition>
  </div>
</div>
`;

exports[`About page snapshots tests renders default about page 2`] = `
<div
  className="layout-fill"
>
  <h1
    className="page-title display-1"
  >
    Add a journal article
  </h1>
  <Stepper
    activeStep={0}
    connector={<pure(StepConnector) />}
    linear={true}
    onChange={[Function]}
    orientation="horizontal"
    style={
      Object {
        "margin": "-10px auto",
        "padding": "0 25px",
      }
    }
  >
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Search for your publication
      </StepLabel>
    </Step>
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Search results
      </StepLabel>
    </Step>
    <Step>
      <StepLabel
        style={
          Object {
            "overflow": "hidden",
            "textOverflow": "ellipsis",
          }
        }
      >
        Claim or Add your publication
      </StepLabel>
    </Step>
  </Stepper>
  <div
    style={
      Object {
        "margin": "auto",
        "maxWidth": "1200px",
        "width": "100%",
      }
    }
  >
    <ExpandTransition
      enterDelay={0}
      loading={false}
      open={true}
      transitionDelay={0}
      transitionDuration={450}
    >
      <div
        style={
          Object {
            "margin": "0 16px",
            "overflow": "hidden",
          }
        }
      >
        <p>
          <FlatButton
            disabled={false}
            fullWidth={false}
            label="Click here to reset the example."
            labelPosition="after"
            labelStyle={Object {}}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            primary={false}
            secondary={false}
          />
        </p>
      </div>
    </ExpandTransition>
  </div>
</div>
`;
